--- a/UpSchoolProject1/Views/Services/Index.cshtml
+++ b/UpSchoolProject1/Views/Services/Index.cshtml
@@ -22,7 +22,7 @@
                 <td>@count</td>
                 <td>@item.Title</td>
                 <td><a href="/Services/DeleteService/@item.ServicesID" class="btn btn-danger">Sil</a></td>
-                <td><a href="#" class="btn btn-success">Güncelle</a></td>
+                <td><a href="/Services/UpdateService/@item.ServicesID" class="btn btn-success">Güncelle</a></td>
             </tr>
         }
     </table>
